Finished base code of WeatherPy

--- a/WeatherPyFinal.ipynb
+++ b/WeatherPyFinal.ipynb
@@ -14,7 +14,7 @@
     "import requests\n",
     "import time\n",
     "import json\n",
-    "from scipy.stats import linregress\n",
+    "import scipy.stats as st\n",
     "\n",
     "# Import API key\n",
     "from api_keys import weather_api_key\n",
@@ -27,7 +27,6 @@
     "\n",
     "# Range of latitudes and longitudes\n",
     "lat_range = (-90, 90)\n",
-    "\n",
     "lng_range = (-180, 180)"
    ]
   },
@@ -74,6 +73,8 @@
     "cloudiness = []\n",
     "wind = []\n",
     "cities_found = []\n",
+    "lats_found = []\n",
+    "lngs_found = []\n",
     "city_count = 1\n",
     "\n",
     "# Loop through each city in original cities list\n",
@@ -89,6 +90,8 @@
     "        humidity.append(response['main']['humidity'])\n",
     "        cloudiness.append(response['clouds']['all'])\n",
     "        wind.append(response['wind']['speed'])\n",
+    "        lats_found.append(response['coord']['lat'])\n",
+    "        lngs_found.append(response['coord']['lon'])\n",
     "        cities_found.append(city)\n",
     "        \n",
     "        # Print the city and record number\n",
@@ -99,7 +102,7 @@
     "    except:\n",
     "        print(f'{city} not found. Continuing...')\n",
     "\n",
-    "print(f'{len(temps)}, {len(humidity)}, {len(cloudiness)}, {len(wind)}, {len(cities_found)}')"
+    "# print(f'{len(temps)}, {len(humidity)}, {len(cloudiness)}, {len(wind)}, {len(cities_found)}')"
    ]
   },
   {
@@ -109,18 +112,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather_df = pd.DataFrame({''\n",
-    "                          'Temperature':temps,\n",
-    "                          'Humidity':humidity,\n",
-    "                          'Cloudiness':cloudiness,\n",
-    "                          'Wind':wind})\n",
-    "weather_df"
+    "# print(f'{len(temps)}, {len[lats_found]}, {len(humidity)}, {len(cloudiness)}, {len(wind)}, {len(cities_found)}')\n",
+    "\n",
+    "# Create Dataframe\n",
+    "weather_df = pd.DataFrame({'Cities':cities_found,\n",
+    "                           'Latitude':lats_found,\n",
+    "                           'Temperature (F)':temps,\n",
+    "                           'Humidity (%)':humidity,\n",
+    "                           'Cloudiness (%)':cloudiness,\n",
+    "                           'Wind Speed (mph)':wind})\n",
+    "weather_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrapped-arbor",
+   "id": "ahead-weekend",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Create Scatter Plot for Temp (F) vs Latitude\n",
+    "cols = ['Temperature (F)','Humidity (%)','Cloudiness (%)','Wind Speed (mph)']\n",
+    "\n",
+    "for col in cols:\n",
+    "    weather_df.plot.scatter(x='Latitude',y=col,c='Blue',\n",
+    "                       xlabel='Latitude',ylabel=col,\n",
+    "                       title=f'Latitude vs. {col}', rot=45)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "imported-quick",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "north_df = weather_df.loc[weather_df['Latitude'] > 0,:]\n",
+    "south_df = weather_df.loc[weather_df['Latitude'] < 0,:]\n",
+    "\n",
+    "for col in cols:\n",
+    "    \n",
+    "    # Northern Hemisphere Analysis\n",
+    "    x_data_n = north_df['Latitude']\n",
+    "    y_data_n = north_df[col]\n",
+    "    correlation = st.pearsonr(x_data_n, y_data_n)\n",
+    "    (slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_data_n, y_data_n)\n",
+    "    regress_values = x_data_n * slope + intercept\n",
+    "    line_eq = f'y = {round(slope,2)}x + {round(intercept,2)}'\n",
+    "    \n",
+    "    # Plotting and formatting\n",
+    "    north_df.plot.scatter(x='Latitude',y=col,c='Blue',\n",
+    "                       xlabel='Latitude',ylabel=col,\n",
+    "                       title=f'Latitude vs. {col} Northern Hemisphere', rot=45)\n",
+    "    plt.plot(x_data_n,regress_values,'r')\n",
+    "    plt.annotate(line_eq, (65,20), fontsize=10, color='red')\n",
+    "    plt.annotate(f\"rsquared = {round(rvalue**2,3)}\", (65,10), fontsize=10, color='red')\n",
+    "    \n",
+    "    # Southern Hemisphere Analysis\n",
+    "    x_data_s = south_df['Latitude']\n",
+    "    y_data_s = south_df[col]\n",
+    "    correlation = st.pearsonr(x_data_s, y_data_s)\n",
+    "    (slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_data_s, y_data_s)\n",
+    "    regress_values = x_data_s * slope + intercept\n",
+    "    line_eq = f'y = {round(slope,2)}x + {round(intercept,2)}'\n",
+    "\n",
+    "    # Plotting and formatting\n",
+    "    south_df.plot.scatter(x='Latitude',y=col,c='Orange',\n",
+    "                       xlabel='Latitude',ylabel=col,\n",
+    "                       title=f'Latitude vs. {col} Southern Hemisphere', rot=45)\n",
+    "    plt.plot(x_data_s,regress_values,'r')\n",
+    "    plt.annotate(line_eq, (65,20), fontsize=10, color='red')\n",
+    "    plt.annotate(f\"rsquared = {round(rvalue**2,3)}\", (65,10), fontsize=10, color='red')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "discrete-sending",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_df.to_csv(output_data_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "opponent-jimmy",
    "metadata": {},
    "outputs": [],
    "source": []
