removed api keys

--- a/WeatherPyFinal.ipynb
+++ b/WeatherPyFinal.ipynb
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ahead-weekend",
+   "id": "distributed-compiler",
    "metadata": {
     "scrolled": false
    },
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imported-quick",
+   "id": "forward-breast",
    "metadata": {
     "scrolled": false
    },
@@ -192,17 +192,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "discrete-sending",
+   "id": "looking-representative",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Write all data to csv\n",
     "weather_df.to_csv(output_data_file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opponent-jimmy",
+   "id": "unlikely-ground",
    "metadata": {},
    "outputs": [],
    "source": []
