--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,10 +2,179 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "tender-bread",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cities</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Temperature (F)</th>\n",
+       "      <th>Humidity (%)</th>\n",
+       "      <th>Cloudiness (%)</th>\n",
+       "      <th>Wind Speed (mph)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ossora</td>\n",
+       "      <td>59.2353</td>\n",
+       "      <td>272.24</td>\n",
+       "      <td>93</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hilo</td>\n",
+       "      <td>19.7297</td>\n",
+       "      <td>292.34</td>\n",
+       "      <td>83</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>clyde river</td>\n",
+       "      <td>70.4692</td>\n",
+       "      <td>268.15</td>\n",
+       "      <td>100</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>georgetown</td>\n",
+       "      <td>5.4112</td>\n",
+       "      <td>300.22</td>\n",
+       "      <td>89</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>hasaki</td>\n",
+       "      <td>35.7333</td>\n",
+       "      <td>281.52</td>\n",
+       "      <td>49</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>554</th>\n",
+       "      <td>tsabong</td>\n",
+       "      <td>-26.0217</td>\n",
+       "      <td>296.81</td>\n",
+       "      <td>19</td>\n",
+       "      <td>63</td>\n",
+       "      <td>2.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>555</th>\n",
+       "      <td>haines junction</td>\n",
+       "      <td>60.7522</td>\n",
+       "      <td>275.15</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>556</th>\n",
+       "      <td>katsuura</td>\n",
+       "      <td>35.1333</td>\n",
+       "      <td>284.34</td>\n",
+       "      <td>54</td>\n",
+       "      <td>75</td>\n",
+       "      <td>7.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>557</th>\n",
+       "      <td>porto novo</td>\n",
+       "      <td>6.4965</td>\n",
+       "      <td>303.15</td>\n",
+       "      <td>74</td>\n",
+       "      <td>40</td>\n",
+       "      <td>5.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>558</th>\n",
+       "      <td>klerksdorp</td>\n",
+       "      <td>-26.8521</td>\n",
+       "      <td>289.98</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>559 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Cities  Latitude  Temperature (F)  Humidity (%)  Cloudiness (%)  \\\n",
+       "0             ossora   59.2353           272.24            93             100   \n",
+       "1               hilo   19.7297           292.34            83              90   \n",
+       "2        clyde river   70.4692           268.15           100              40   \n",
+       "3         georgetown    5.4112           300.22            89              20   \n",
+       "4             hasaki   35.7333           281.52            49              20   \n",
+       "..               ...       ...              ...           ...             ...   \n",
+       "554          tsabong  -26.0217           296.81            19              63   \n",
+       "555  haines junction   60.7522           275.15            60               3   \n",
+       "556         katsuura   35.1333           284.34            54              75   \n",
+       "557       porto novo    6.4965           303.15            74              40   \n",
+       "558       klerksdorp  -26.8521           289.98            26               0   \n",
+       "\n",
+       "     Wind Speed (mph)  \n",
+       "0                1.74  \n",
+       "1                1.54  \n",
+       "2               10.29  \n",
+       "3                1.54  \n",
+       "4                6.69  \n",
+       "..                ...  \n",
+       "554              2.29  \n",
+       "555              1.54  \n",
+       "556              7.72  \n",
+       "557              5.66  \n",
+       "558              2.98  \n",
+       "\n",
+       "[559 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,7 +185,10 @@
     "import os\n",
     "\n",
     "# Import API key\n",
-    "from api_keys import g_key"
+    "from api_keys import g_key\n",
+    "\n",
+    "weather_df = pd.read_csv('output_data/cities.csv').drop(['Unnamed: 0'],axis=1)\n",
+    "weather_df"
    ]
   },
   {
