Added analysis of each scatter plot

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1101,6 +1101,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "narrative-general",
+   "metadata": {},
+   "source": [
+    "## HEMISPHERE WEATHER ANALYSIS\n",
+    "\n",
+    "### The first set of graphs shows the relationship between temperature and latitude in each hemisphere. The data shows that there is a strong correlation between latitude and temperature in both north and south hemispheres of the earth. The r-squared values for each fit in north and south hemispheres are 0.794 and 0.593, respectively.\n",
+    "\n",
+    "### The second, third, and fourth sets of graphs shows the relationship between latitude and humidity, cloudiness, and windspeed, respectively, in each hemisphere. None of these graphs show any correlation between latitude and the respective weather measurement. None of the r-squared values for each fit are near 0.60 which would indicate a correlation between the two variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "looking-representative",
